# DatabricksHackaton25

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  app.yaml  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py
data/sample_datasets/: retail_sales_sample.csv
data_generation/: config.py  generate_synthetic_data.py
databricks/: unity_catalog_setup.sql
databricks/genie_spaces/: finance_analyst.md  marketing_specialist.md  operations_specialist.md
databricks/notebooks/: 01_pdf_processing_pipeline.py  02_vector_search_setup.py
docs/: architecture.md  deployment.md
mcp_server/: __init__.py  config.py  server.py
mcp_server/tools/: calculation_tools.py  data_tools.py  simulation_tools.py
notebooks/: 01_setup_data_tables.py  02_setup_vector_search.py  03_deploy_uc_functions.sql
scripts/: deploy.sh
src/genies/: genie_client.py
src/orchestrator/: intent_classifier.py  master_orchestrator.py
src/rag/: vector_search.py
src/simulations/: unity_catalog_functions.py
src/ui/: app.py
src/utils/: logger.py
src/visualizations/: chart_generator.py
